<resources>
    <string name="app_name">Your Life Coach</string>
    <string name="title_activity_welcome">Home Screen</string>

    //intro activity
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Tranning Habits</string>
    <string name="slide_1_desc">The easiest way to have a good habit!</string>

    <string name="slide_2_title">Spending Time</string>
    <string name="slide_2_desc">Manage your phone usage time!</string>

    //main activiy
    <string name="btn_signin">Sign in</string>
    <string name="btn_signup">Sign up</string>

    //signup activity
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="conf_password_label">Confirm Password</string>
    <string name="email_label">Email</string>
    <string name="phoneNum_label">PhoneNumber</string>
    <string name="msg_error_1">PLEASE FILL ALL FIELDS</string>
    <string name="msg_error_2">CONFIRM PASSWORD DOES NOT MATCH</string>
    <string name="msg_error_3">PASSWORD LESS THAN 7 CHARACTERS</string>
    <string name="msg_erorr_4">INVALID EMAIL ADDRESS</string>
    <string name="msg_error_5">USERNAME LESS THAN 7 CHARACTERS</string>
    <string name="msg_error_6">USERNAME ALREADY EXISTS</string>

    //signin activity
    <string name="google_signin">SIGN IN WITH GOOGLE</string>
    <string name="facebook_singin">SIGN IN WITH FACEBOOK</string>
    <string name="msg_error_7">ACCOUNT DOES NOT EXIST</string>
    <string name="msg_error_8">PASSWORD INCORRECT</string>
    <string name="msg_or">OR</string>

    //menu
    <string name="title_habit">Habits</string>
    <string name="title_spending">Spending</string>

    //habit home
    <string name="msg_query_hint">Search your habit</string>
    <string name="msg_today">Today</string>
    <string name="msg_total">Total</string>

    //initialize habit
    <string name="msg_habit_name">Name</string>
    <string name="msg_hint_habit_name">Input Habit Name</string>
    <string name="msg_type">Type</string>
    <string name="msg_type_default">Others</string>
    <string name="msg_starting_day">Starting day</string>
    <string name="msg_starting_day_default">No date pick</string>
    <string name="btn_starting_day">Change</string>
    <string name="msg_trainning_days">Tranning days</string>
    <string name="msg_days">7 Days</string>
    <string name="msg_thumnail">Choose a thumbnail</string>
    <string name="msg_reminder">Reminder</string>
    <string name="msg_repetition">Repeitition</string>
    <string name="msg_repetition_default">Whole week</string>
    <string name="msg_daily_repetition">Daily repetition</string>
    <string name="msg_daily_repetition_default">No time set</string>
    <string name="msg_set_time">Set time</string>
    <string name="msg_start">start</string>
    <string name="msg_end">end</string>
    <string name="msg_description">Description</string>
    <string name="msg_description_hint">Input a description</string>
    <string name="msg_day_of_week_1">Monday</string>
    <string name="msg_day_of_week_2">Tuesday</string>
    <string name="msg_day_of_week_3">Wednesday</string>
    <string name="msg_day_of_week_4">Thursday</string>
    <string name="msg_day_of_week_5">Friday</string>
    <string name="msg_day_of_week_6">Saturday</string>
    <string name="msg_day_of_week_7">Sunday</string>

    //sumary
    <string name="msg_statistic">Statistic</string>
    <string name="msg_default_data">0m</string>

    //Notification
    <string name="msg_tracking">Tracking</string>
    <string name="msg_dismiss">Dismiss</string>

    //Setting
    <string name="msg_setting">Setting</string>
    <string name="msg_signout">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
