<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dot_light_screen"
    android:layout_height="match_parent"
    tools:context=".Component.Intro.FlashIntroActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_alignParentTop="true">

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/ic_decor_intro1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:src="@drawable/icon_app"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/bg_screen"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/btn_signin"
            android:textColor="@color/dot_light_screen"
            app:cornerRadius="@dimen/_20sdp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup"
            android:layout_marginTop="30dp"
            android:textColor="@color/dot_light_screen"
            app:cornerRadius="@dimen/_20sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">
        <View
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="185.97dp"
            android:background="@drawable/ic_decor_intro2"/>

    </LinearLayout>

</RelativeLayout>